# fcpw-triquery

./: .gitmodules  README.md
demos/: demo.cpp
include/fcpw/: fcpw.h  fcpw.inl
include/fcpw/aggregates/: bvh.h  bvh.inl
include/fcpw/core/: primitive.h  triangle_query.h
python/: fcpw_py.cpp
tests/: CMakeLists.txt  triangle_query_tests.cpp
